Fixed a bug with Gender Counts
Books that are either missing gender shelves, or have multiple authors
with different genders will result in a null Gender. We'll now skip
those books when counting.

Additionally, I updated a deprecated call for Java 9 while I was here.